--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,8 @@
             "email": "patrykdawidpoloczek@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+      "ext-pdo": "*",
+      "ext-sqlite": "*"
+    }
 }
