--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,10 @@
         }
     ],
     "require": {
-      "ext-pdo": "*",
-      "ext-sqlite": "*"
+        "ext-pdo": "*",
+        "ext-sqlite3": "*"
+    },
+    "require-dev": {
+        "symfony/var-dumper": "^7.1"
     }
 }
